@@ -14,6 +14,9 @@
    - stevesk@cvs.openbsd.org 2001/07/19 00:41:44
      [ssh.1]
      escape chars are below now
+   - markus@cvs.openbsd.org 2001/07/20 14:46:11
+     [ssh-agent.c]
+     do not exit() from signal handlers; ok deraadt@
 
 20010719
  - (tim) [configure.in] put inet_aton back in AC_CHECK_FUNCS.
@@ -6087,4 +6090,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1419 2001/07/22 20:41:59 mouring Exp $
+$Id: ChangeLog,v 1.1420 2001/07/22 20:44:00 mouring Exp $
